# fetch.rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: generate-meta.yml
src/: forge.rs  util.rs
